[#10805] Support bulk user operations
